Readability check in Symbol::is_valid not performed for some addresses

XMLWordPrintable

    • b16

        Due to a possible address overflow in internal computation, Symbol::is_valid can crash with SIGSEGV when it got e.g. (address)-8. There's no other check which prevents this.
        We have seen "error occurred during error reporting" on Windows 32 bit for such a case.

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: