8221833: Readability check in Symbol::is_valid not performed for some addresses

Reviewed-by: zgu, coleenp